# hello_bin

./: .gitignore  Makefile  create_tar.sh  default.nix  hello.cpp  hello_hishinuma  inner_prod.cpp
1_openblas_dot/: Makefile  default.nix  inner_prod.cpp
2_poetry/: default.nix  inner_prod.py  pyproject.toml
3_create_channel/example/: default.nix
3_create_channel/mychannel/: default.nix
3_create_channel/mychannel/pkgs/mylib/: default.nix
3_create_channel/mylib/: Makefile  mylib.cpp  mylib.hpp
blas_dot/: builder.sh
hello/: Makefile  hello.cpp
mychannel/: default.nix
mychannel/pkgs/migen/: default.nix
mychannel/pkgs/toshi_hello/: default.nix
mylib/: Makefile
nosrc_hello/: default.nix
old/openblas_dot/: Makefile
old/withsrc_mycode/: default.nix  inner_prod.cpp
openblas_dot/: Makefile  default.nix
withsrc_mycode/: default.nix
wosrc_myucode/: default.nix
