[tool.poetry]
name = "2-pip-cargo"
version = "0.1.0"
description = ""
authors = ["Toshiaki Hishinuma <hishinuma.toshiaki@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
